fix search bar placement/stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ ul {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 33vh;
+  height: 350px;
   width: 100%;
   color: white;
   justify-content: center;
@@ -70,8 +70,9 @@ ul {
 }
 
 .input {
-  display: flex;
+  display:flex;
   justify-content: center;
+  align-items: center;
 }
 
 .flex-form > * {
@@ -82,17 +83,36 @@ ul {
   font-size: 13px;
   border-radius:0;
   outline:0;
+  border-right:1px solid rgba(0,0,0,0.2);
   -webkit-appearance:none;
-
 }
 
 .flex-form {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 97%;
+}
+
+.flex-form > *:not([type="date"]) {
+  border-top:1px solid white;
+  border-bottom:1px solid white;
+}
+
+.flex-form input[type="submit"] {
+  background:#FF5A5F;
+  border-top: 1px solid #FF5A5F;
+  border-bottom: 1px solid #FF5A5F;
+  color:white;
+}
+
+.flex-form {
+  z-index: 10;
+  position: relative;
 }
 
 input[type="search"] {
-  display: flex;
-  width: 90%;
+  flex-basis: 700px;
 }
 
 /*.dates {
@@ -184,10 +204,6 @@ input[type="search"] {
   justify-content: center;
   color: white;
 }
-
-
-
-
 
 
 footer {
